# triangle-inequality

./: Main.hs  README.md  triangle-inequality.cabal
src/: TH.hs  Test.hs  Type.hs
