name:                triangle-inequality
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Nikita Karetnikov
maintainer:          nikita@karetnikov.org
copyright:           2015 Nikita Karetnikov
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Test
                     , Type
                     , TH
  build-depends:       base >=4.8 && <4.9
                     , template-haskell >=2.10 && <2.11
